examples/singlenode/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rusternetes-nginx
  labels:
    app: rusternetes-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rusternetes-nginx
  template:
    metadata:
      labels:
        app: rusternetes-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
