examples/singlenode/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rusternetes-nginx-pod
  labels:
    app: rusternetes-nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
