examples/singlenode/volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rusternetes-volume-demo
spec:
  containers:
  - name: writer
    image: nginx:latest
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: rusternetes-local-pvc
