examples/singlenode/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rusternetes-nginx
spec:
  selector:
    app: rusternetes-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
